🐛 Fix content scroll and footer alignment

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -24,5 +24,5 @@ body {
     width: 95vw;
     height: 82vh;
     box-sizing:content-box;
-    overflow: hidden;
+    overflow-y: auto;
 }
